<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"

    tools:context="com.example.maryamabdulrhman.ais.MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_above="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo2" />

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:drawableLeft="@drawable/ic_action_user"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="14dp"
        android:drawableLeft="@drawable/ic_action_pass"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_alignEnd="@+id/Fpassword"
        android:layout_alignRight="@+id/Fpassword"
        android:layout_below="@+id/password"
        android:background="@color/colorPrimary"
        android:text="@string/login" />


    <TextView
        android:id="@+id/Fpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:layout_centerHorizontal="true"
        android:text="@string/f_pass"
        android:textColor="@color/colorPrimaryDark" />




    <ImageView
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/banner"
        app:srcCompat="@drawable/baner2" />

    <Button
        android:id="@+id/SignupD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_below="@+id/Signupas"
        android:text="@string/Sing_upD" />

    <Button
        android:id="@+id/Signupp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/SignupD"
        android:layout_alignBottom="@+id/SignupD"
        android:layout_alignEnd="@+id/password"
        android:layout_alignRight="@+id/password"
        android:text="@string/Sing_upP" />

    <TextView
        android:id="@+id/Signupas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/logo"
        android:layout_alignStart="@+id/logo"
        android:layout_below="@+id/Fpassword"
        android:text="@string/Sing_upas"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/SignupD"
        android:layout_alignBottom="@+id/SignupD"
        android:layout_toEndOf="@+id/SignupD"
        android:layout_toRightOf="@+id/SignupD"
        android:text="@string/or" />

</RelativeLayout>
