<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/gender"
        android:layout_width="230dp"
        android:layout_height="35dp"
        android:layout_alignEnd="@+id/date"
        android:layout_alignLeft="@+id/genderTextCorona"
        android:layout_alignRight="@+id/date"
        android:layout_alignStart="@+id/genderTextCorona"
        android:layout_below="@+id/genderTextCorona"
        android:entries="@array/gender"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/genderTextCorona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ageRange"
        android:layout_alignStart="@+id/ageRange"
        android:layout_below="@+id/ageRange"
        android:text="@string/Gender" />


    <EditText
        android:id="@+id/date"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:layout_below="@+id/DateText"
        android:layout_centerHorizontal="true"
        android:focusable="false"
        android:hint="@string/date"
        android:inputType="date"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/reportCoronaNav"
        android:layout_width="match_parent"
        android:layout_height="35dp"

        android:layout_alignParentLeft="true"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:text="@string/Reportflu"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/DateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/date"
        android:layout_alignStart="@+id/date"
        android:layout_below="@+id/reportCoronaNav"
        android:layout_marginTop="42dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/locationTextCorona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gender"
        android:layout_alignStart="@+id/gender"
        android:layout_below="@+id/gender"
        android:layout_marginTop="24dp"
        android:text="@string/location" />

    <TextView
        android:id="@+id/ageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/date"
        android:layout_alignStart="@+id/date"
        android:layout_below="@+id/date"
        android:layout_marginTop="18dp"
        android:text="@string/age" />

    <Button
        android:id="@+id/reportflubtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/locationTextCorona"
        android:layout_alignStart="@+id/locationTextCorona"
        android:layout_below="@+id/locationTextCorona"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/report" />

    <Button
        android:id="@+id/cancelBut"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/reportflubtn"
        android:layout_alignBottom="@+id/reportflubtn"
        android:layout_alignEnd="@+id/gender"
        android:layout_alignRight="@+id/gender"
        android:background="@android:color/holo_red_light"
        android:text="@string/reset" />

    <Spinner
        android:id="@+id/ageRange"
        android:layout_width="230dp"
        android:layout_height="35dp"
        android:layout_alignEnd="@+id/date"
        android:layout_alignLeft="@+id/ageText"
        android:layout_alignRight="@+id/date"
        android:layout_alignStart="@+id/ageText"
        android:layout_below="@+id/ageText"
        android:entries="@array/ageRange" />

</RelativeLayout>
