<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.maryamabdulrhman.ais.ForgetpassworedActivity">

    <TextView
        android:id="@+id/forgotpassowred"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:drawableStart="@drawable/ic_action_back"
        android:drawableLeft="@drawable/ic_action_back"
        android:text="@string/fpasswored"

        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:background="@color/colorPrimary" />


    <EditText
        android:id="@+id/email1"
        android:layout_width="290dp"
        android:layout_height="35dp"
        android:layout_below="@+id/forgotpassowred"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="12sp" />
    <Button
        android:id="@+id/Submit"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/email1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@color/colorPrimary"
        android:text="@string/submit" />

</RelativeLayout>
