<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/sgenderCorona"
        android:layout_width="230dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/genderTextCorona"
        android:layout_alignStart="@+id/genderTextCorona"
        android:layout_centerVertical="true"
        android:entries="@array/gender"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/genderTextCorona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dateyearCorona"
        android:layout_alignStart="@+id/dateyearCorona"
        android:layout_below="@+id/ageText"
        android:layout_marginTop="35dp"
        android:text="@string/Gender" />

    <Spinner
        android:id="@+id/datemonthCorona"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_alignBaseline="@+id/dateyearCorona"
        android:layout_alignBottom="@+id/dateyearCorona"
        android:layout_centerHorizontal="true"
        android:entries="@array/month" />

    <Spinner
        android:id="@+id/datedayCorona"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_alignBaseline="@+id/dateyearCorona"
        android:layout_alignBottom="@+id/dateyearCorona"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:entries="@array/day" />

    <Spinner
        android:id="@+id/dateyearCorona"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/DateTextCorona"
        android:layout_alignStart="@+id/DateTextCorona"
        android:layout_below="@+id/DateTextCorona"
        android:layout_marginTop="20dp"
        android:entries="@array/year" />

    <TextView
        android:id="@+id/reportCoronaNav"
        android:layout_width="match_parent"
        android:layout_height="35dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_action_back"
        android:drawableStart="@drawable/ic_action_back"
        android:text="@string/Reportflu"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/DateTextCorona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/ageText"
        android:layout_alignRight="@+id/ageText"
        android:layout_below="@+id/reportCoronaNav"
        android:layout_marginTop="32dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/locationTextCorona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ageText"
        android:layout_alignStart="@+id/ageText"
        android:layout_below="@+id/sgenderCorona"
        android:layout_marginTop="20dp"
        android:text="@string/location" />

    <TextView
        android:id="@+id/ageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/cancelBut"
        android:layout_alignRight="@+id/cancelBut"
        android:layout_below="@+id/datemonthCorona"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginTop="18dp"
        android:text="@string/age" />

    <Button
        android:id="@+id/reportCoronabu"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/datedayCorona"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/datedayCorona"
        android:layout_marginBottom="19dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/report" />

    <Button
        android:id="@+id/cancelBut"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/reportCoronabu"
        android:background="@android:color/holo_red_light"
        android:text="@android:string/cancel" />

    <Spinner
        android:id="@+id/Agespinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ageText"
        android:layout_alignStart="@+id/ageText"
        android:layout_below="@+id/ageText"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/get_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/datemonthCorona"
        android:layout_alignStart="@+id/datemonthCorona"
        android:layout_below="@+id/locationTextCorona"
        android:layout_marginTop="33dp"
        android:text="@string/get_place" />

</RelativeLayout>